fixed margin and spacing between stat items vertically and horizontally while in full view and when viewport resizes

--- a/styles/style.css
+++ b/styles/style.css
@@ -78,6 +78,7 @@ flex-direction: row;
 justify-content: space-evenly;
 align-items: center;
 padding: 4%;
+flex-wrap: wrap;
 }
 
 #total-games {
@@ -100,6 +101,11 @@ display: flex;
 flex-direction: column;
 }
 
+.stat-width {
+flex-basis: 20%;
+margin: 5% 2.5%;
+}
+
 .Two-Column-Container {
 display: grid;
 width: 500px;
@@ -115,8 +121,7 @@ grid-gap: 0.75em;
     color: white;
     display: flex;
     align-items: center;
-    justify-content: center;
-    
+    justify-content: center; 
 }
 
 .Hall-of-Fame-items {
@@ -143,5 +148,13 @@ border-style: solid;
   .Hall-of-Fame-items {
     height: 10vh;
     }
+  
+  #stats {
+      display: flex;
+      flex-direction: column;
+      }
 
+  .stat-width {
+      margin: 5% auto;
+        }
   }
